--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -2,10 +2,20 @@
 <configuration>
 	<appSettings>
 		<add key="filePath" value="D:\C#\projects\TournamentTracker\TextFiles"/>
+		<add key="greaterWins" value="1"/>
+		<add key="senderEmail" value="asd@qwert.com"/>
+		<add key="senderDisplayName" value="asdqwert"/>
 	</appSettings>
 	<connectionStrings>
 		<add name="Tournaments" connectionString ="Server=.\SQLEXPRESS;Database=Tournaments;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
+	<system.net>
+		<mailSettings>
+			<smtp deliveryMethod="Network">
+				<network host="192.168.0.100" userName="xxx" password="yyy" port="25" enableSsl="false"/>
+			</smtp>
+		</mailSettings>
+	</system.net>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
