Fixed more bugs, finished more stuff, application is now complete, working and ready to use.

--- a/TrackerUI/App.config
+++ b/TrackerUI/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="filePath" value="D:\C#\projects\TournamentTracker\TextFiles"/>
+		<!-- <add key="filePath" value="D:\C#\projects\TournamentTracker\TextFiles"/> -->
+		<add key="filePath" value="..\..\..\TextFiles"/>
 		<add key="greaterWins" value="1"/>
 		<add key="senderEmail" value="asd@qwert.com"/>
 		<add key="senderDisplayName" value="asdqwert"/>
@@ -12,7 +13,7 @@
 	<system.net>
 		<mailSettings>
 			<smtp deliveryMethod="Network">
-				<network host="192.168.0.100" userName="xxx" password="yyy" port="25" enableSsl="false"/>
+				<network host="192.168.0.100" userName="" password="" port="25" enableSsl="false"/>
 			</smtp>
 		</mailSettings>
 	</system.net>
